force-app/main/default/objects/Quiz_Session__c/Quiz_Session__c.object-meta.xml
<CustomObject>
    <label>Quiz_Session</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Quiz_Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz_Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>