force-app/main/default/objects/Quiz_Session__c/fields/isResultPublished__c.field-meta.xml
<CustomField>
    <fullName>isResultPublished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isResultPublished?</label>
    <type>Checkbox</type>
</CustomField>