force-app/main/default/objects/Quiz_Session__c/fields/Quiz_Assessment_Name__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Assessment_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quiz_Assessment_Name</label>
    <referenceTo>Quiz_Assessment_Name__c</referenceTo>
    <relationshipLabel>Quiz_Sessions</relationshipLabel>
    <relationshipName>Quiz_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>