force-app/main/default/objects/Quiz_Session__c/fields/Session_Join_Code__c.field-meta.xml
<CustomField>
    <fullName>Session_Join_Code__c</fullName>
    <label>Session Join Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>