force-app/main/default/objects/Quiz_Session__c/fields/Session_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Time_Minutes__c</fullName>
    <label>Session Time(Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>