force-app/main/default/objects/Quiz_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session_Status__c</columns>
    <columns>Session_Join_Code__c</columns>
    <columns>Session_Name__c</columns>
    <columns>Session_Time_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>